= 2.0.0.70 =
* REST API allow search posts by GPS, IP and near address - ADDED

= 2.0.0.69 =
* Fixed some W3 validation issues - FIXED
* Admin tooltips can break image upload buttons - FIXED

= 2.0.0.68 =
* Validate register user during add listing from frontend - FIXED
* Enfold theme default layout & sidebar settings is not working - FIXED
* WPML translation not working for strings defined via variable - FIXED
* Custom field date shows un-translated date - FIXED
* Option added to set post images widget title - ADDED
* Option added in map widget/shortcode to tick/untick categories on the map - ADDED
* Exclude GD template pages from Yoast XML page sitemap - ADDED
* Rank Math SEO not detecting GD fields - FIXED
* Add listing by logged out user not working in incognito mode - FIXED
* Rescue category redirect url adds location twice - FIXED
* %%in_location_single%% is not working on detail page meta title - FIXED
* Map widget/shortcode doesn't show filtered listings on non GD pages - FIXED
* Post badge add support for post modified date - ADDED
* ffmp theme shows incorrect titles on GD pages - FIXED
* Ninja contact form sometimes not finding the post id and email fails - FIXED
* Better integration with Fusion builder, all items now also fusion items - ADDED

= 2.0.0.67 =
* Fail to save feature image for new listing when post revision is enabled - FIXED
* Post link not working in email sent to admin on post edit - FIXED
* Post badge does not supports category and tags - FIXED
* Option added in gd_categories widget/shortcode to CPT title - ADDED
* Rank Math SEO option overwrites Yoast SEO option - FIXED
* Filter GD Categories widget get terms args - ADDED
* Rank Math plugin sitemap image count wrong for GD listings - FIXED
* Post Images widget now has `fallback_types` that can be set - ADDED
* Post Images widget can now generate screenshots of url fields by appending `_screenshot` eg: website_screenshot - ADDED