@@ -1,5 +1,6 @@
 = 2.0.0.70 =
 * REST API allow search posts by GPS, IP and near address - ADDED
+* GD Search Themer Layout overwrites the WordPress search page - FIXED
 
 = 2.0.0.69 =
 * Fixed some W3 validation issues - FIXED
